log
Wed 20 Mar 2024 04:56:07 PM UTC: 
 tests:  0|5
total_score: 0/70
bc3a8a7
Wed 20 Mar 2024 04:57:27 PM UTC: 
 exercises.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 49 insertions(+), 6 deletions(-)
 tests:  4|1
total_score: 50/70
afef9ab
Thu 21 Mar 2024 08:12:59 PM UTC: 
 exercises.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 63 insertions(+)
In file included from test.c:5:
exercises.c:196:1: error: expected identifier or ‘(’ before ‘}’ token
  196 | }
      | ^
Compilation failed
3b5f36d
